# workout_gpx_rs

./: .gitignore  Cargo.toml  README.md  workouts.sqlite
db/: 000_init.sql
migrations/: 000_init.sql  000_workouts.sql  000_workoutsgeo.sql
src/: lib.rs  main.rs  sql.rs
