[package]
name = "workout_gpx_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
chrono = "0.4.22"
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.136"
serde_json = "1.0.79"
sqlite = "0.27.0"
lazy_static = "1.4"
strum = { version = "0.24", features = ["derive"] }
regex = "1.6"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
quick-xml = "0.25.0"
xml-rs = "0.8.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
