[package]
name = "workout_gpx_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
serde = { version = "1.0.136", features = ["derive"] }
serde_cbor = "0.11.2"
serde_derive = "1.0.136"
serde_json = "1.0.79"
rusqlite = { version = "0.29.0", features = ["load_extension", "time", "vtab", "serde_json"] }
lazy_static = "1.4"
strum = { version = "0.24", features = ["derive"] }
regex = "1.6"
tokio = { version = "1.28", features = ["full", "macros"] }
tokio-stream = "0.1.10"
quick-xml = "0.25.0"
xml-rs = "0.8.4"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
clap = { version = "4.3.23", features = ["derive", "cargo", "env"] }
walkers = "0.6.0"
eframe = "0.22.0"
egui = "0.22.0"
env_logger = "0.10.0"
sqlx = { version = "0.7.1", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate" ] }
futures = "0.3.28"
sha256 = "1.4.0"
const_format = "0.2.31"
